Make log files optional

--- a/lgproxy.cfg
+++ b/lgproxy.cfg
@@ -1,6 +1,6 @@
 
 DEBUG=False
-LOG_FILE="/var/log/lg-proxy/lg-proxy.log"
+LOG_FILE=False
 LOG_LEVEL="WARNING"
 BIND_IP = "0.0.0.0"
 BIND_PORT = 5000
